indico/modules/events/registration/client/styles/regform.module.scss
// This file is part of Indico.
// Copyright (C) 2002 - 2022 CERN
//
// Indico is free software; you can redistribute it and/or
// modify it under the terms of the MIT License; see the
// LICENSE file for more details.

@import 'base/palette';
@import 'base/utilities';

.setup-toolbar {
  margin-bottom: 1em;
}

.disabled-sections {
  // TODO turn this into something generic - the same CSS is used in the editing TagManager
  :global(.segment) {
    display: flex;
    align-items: center;
    justify-content: space-between;

    .actions {
      min-width: 50px;
      display: flex;
      align-items: center;
      justify-content: space-between;

      i:global(.icon) {
        margin-right: 0;
        cursor: pointer;
      }
    }
  }
}

.form-item {
  display: flex;
  padding-top: 7px;

  &:last-child {
    padding-bottom: 7px;
  }

  &.disabled {
    background: $light-gray;

    > .content {
      color: $dark-gray;
    }
  }

  > .content {
    flex-grow: 1;

    .field {
      margin-bottom: 3px;

      .price-tag {
        float: unset;
        margin-left: 2em;
      }

      .number-field,
      .boolean-field {
        display: flex;
        align-items: center;
      }

      .multichoice-table {
        border-spacing: 0 5px;
      }

      .multichoice-dropdown {
        padding-top: 6px;
        padding-left: 12px;
        min-height: 30px;
        height: 30px;
        min-width: 50px;

        i:global(.dropdown.icon) {
          padding-top: 7px;
          right: 0.8em;
        }
      }

      .price {
        margin-left: 1.5em;
      }
    }

    > .description {
      max-width: 600px;
      padding: 3px 0 0 2px;
      text-align: justify;
      font-style: italic;
      font-size: 0.9em;
      color: $dark-gray;
    }

    textarea,
    select,
    input[type='text'],
    input[type='number'],
    input[type='email'],
    input[type='file'],
    input[type='tel'] {
      width: auto;
    }

    input[type='file'],
    input[type='email'] {
      width: 600px;
    }
  }

  > .actions {
    visibility: hidden;

    a + a {
      margin-left: 3px;
    }
  }

  &.editable {
    .sortable-handle {
      color: $dark-gray;
      margin-left: -10px;
      width: 25px;

      &::before {
        position: relative;
        left: 8px;
      }
    }

    &.disabled .sortable-handle {
      pointer-events: none;
    }

    &:not(.disabled):hover .sortable-handle {
      @include icon-before('icon-drag-indicator');
      cursor: grab;
    }

    &:not(.disabled):hover .sortable-handle:active {
      cursor: grabbing;
    }

    &:hover > .actions {
      visibility: visible;
    }
  }

  ul.radio-group {
    margin: 0;
    padding-left: 0;

    li {
      list-style-type: none;
    }
  }

  :global(.DateRangePickerInput__disabled) {
    background: inherit;
  }

  :global(.DateRangePickerInput_calendarIcon)[disabled] {
    visibility: hidden;
  }

  :global(.SingleDatePickerInput) {
    border-radius: 4px;
  }

  :global(.DateInput) {
    width: inherit;
  }

  :global(.rc-time-picker-input) {
    height: inherit;
  }
}

// TODO: clean up the old CSS; we may no longer need this afterwards.
// make sure to test this with the lockUI dimmer - the content must not
// jump around when it gets activated
:global(.regform-section-list) > :first-child :global(.regform-section) {
  margin-top: 0;
}

:global(.regform-section > .i-box-header) {
  align-items: baseline;
  overflow: visible;

  .header-wrapper {
    flex-grow: 1;
  }

  .section-sortable-handle {
    font-size: 1.2em;
    width: 15px;
    position: relative;
    left: -3px;
  }

  &:hover .section-sortable-handle {
    @include icon-before('icon-drag-indicator');
    cursor: grab;
  }

  &:hover .section-sortable-handle:active {
    cursor: grabbing;
  }
}

.section-actions {
  a {
    font-size: 1.2em;
  }

  a + a,
  a + div {
    margin-left: 5px;
  }
}

.dropdown-menu {
  display: inline-grid;
  grid-template-columns: 1fr 1fr;

  & > div:first-child {
    border-right: 1px solid rgba(34, 36, 38, 0.15);
  }
}

.dropdown-item {
  cursor: pointer;
  line-height: 1em;
  color: rgba(0, 0, 0, 0.87);
  padding: 11px 16px;
  font-size: 1rem;
  font-weight: normal;

  i {
    padding-right: 10px;

    &::before {
      cursor: pointer;
    }
  }
}

.dropdown-item:hover {
  background: rgba(0, 0, 0, 0.05);
  color: rgba(0, 0, 0, 0.95);
}

